# torchvggish

./: main.py  pyproject.toml
torchvggish/: mel_features.py  vggish.py  vggish_input.py  vggish_params.py
